# FW-H-Solver

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
config/: fw_h_config.yaml
docs/: modules.rst
fw_h/: __init__.py  config.py  fw_h.py  geometry.py  solver.py  source.py  visualize.py
source/: conf.py  index.rst
tests/: __init__.py
