[tool.poetry]
name = "fw-h"
version = "0.1.0"
description = "A solver for the Ffowcs Williams and Hawkings (FW-H) equation written in Python using Farassat's Formulation 1A."
license = "MIT"
authors = [
	"Matthew Mehrtens <12023414+mcmehrtens@users.noreply.github.com>",
]
readme = "README.md"
repository = "https://github.com/mcmehrtens/FW-H-Solver"
keywords = ["fw-h", "solver"]


[tool.poetry.dependencies]
python = "^3.13"
numpy = {version = "^2.2.0rc1", allow-prereleases = true}
matplotlib = {version = "^3.10.0rc1", allow-prereleases = true}
pyyaml = "^6.0.2"
pydantic = "^2.10.3"


[tool.poetry.scripts]
fw-h = "fw_h.fw_h:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
