[tool.poetry]
name = "fw-h"
version = "0.1.0"
description = "A solver for the Ffowcs Williams and Hawkings (FW-H) equation written in Python using Farassat's Formulation 1A."
license = "MIT"
authors = [
    "Matthew Mehrtens <12023414+mcmehrtens@users.noreply.github.com>",
]
readme = "README.md"
repository = "https://github.com/mcmehrtens/FW-H-Solver"
keywords = ["fw-h", "solver"]


[tool.poetry.dependencies]
python = "^3.13.1"
pyyaml = "^6.0.2"
pydantic = "^2.10.3"
sympy = "^1.13.3"
numpy = "^2.2.0"
matplotlib = "^3.9.3"


[tool.poetry.scripts]
fw-h = "fw_h.fw_h:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
